content/app/styles/scss/_styles.scss
/* ... */
.add-scroll {
  padding-top: 0 !important;
}

.sm-btn {
  width: 120px !important;
}

#addPhoto {
  margin: 10px auto 20px auto;
}

#addBook {
  margin: 20px auto;
}

#custom-art {
  margin: 10px 0;
  text-align: center;
  display: none;
  img {
    height: 160px;
  }
}

select#numberAvailable {
  width: 100%;
  height: 36px;
  text-align: center !important;
  font-size: 16px;
}

/*
------------------------------
  Check In / Check Out
------------------------------
*/
.check{
  width: 100%;
  height: 250px;
  margin: 0 auto;
  padding: 75px 5% 0 5% !important;
  text-align: left;
  background-color: #fff;
  border-bottom: 1px solid $border;
  img {
    height: 160px;
  }
  .title-art {
    float: left;
    max-width: 120px;
  }
  .title-info {
  	width: 54%;
    float: left;
    margin-left: 15px;
  }
  .check-btn {
    width: 120px;
    padding: 8px 0 10px 0;
    font-size: 16px;
  }
}
.name-header {
  width: 100%;
  margin: 0 auto;
  color: $red;
  font-weight: 500;
  text-align: center;
  padding: 11px 0 12px 0;
  border-bottom: 1px solid $border;
}
.check-wrap {
  top: 290px !important;
}
.check-scroller {
  padding: 0 !important; 
}

#checkout-view {
  .no-art {
    width: 100px;
    height: 100px;
    margin: 10px auto 0 auto;
    float: left;
  }
  .no-icon {
    width: 70px;
    height: 68px;
    background-image: url(../images/no-art.png);
    background-size: 70px 68px;
    margin: 0 auto;
    opacity: 0.1;
  }
}

/*
------------------------------
  Book Details
------------------------------
*/
#bookdetail-view {
  .no-art {
    width: 120px;
    height: 120px;
    margin: 0 auto;
  }
  .no-icon {
    width: 90px;
    height: 87px;
    background-image: url(../images/no-art.png);
    background-size: 90px 87px;
    margin: 0 auto;
    opacity: 0.1;
  }
}

/*
------------------------------
  Book List
------------------------------
*/
.booklist-wrap {
  top: 90px !important;
}
#filter-wrap {
  border-top: 1px solid $filter;
  margin-top: 10px;
  padding-top: 9px;
}
.filter {
  overflow: hidden;
  width: 95%;
  margin: 0 auto;
  font-size: 14px;
  span {
    float: left;
    padding: 5px 0 8px 0;
    text-align: center;
    color: $white;
  }
  #filt-available {
    width: 30%;
    border-top: 1px solid $filter;
    border-bottom: 1px solid $filter;
  }
  #filt-checked {
    width: 40%;
    border: 1px solid $filter;
    -webkit-border-top-right-radius: 5px;
    -webkit-border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;

  }
  #filt-all {
    border: 1px solid $filter;
    width: 30%;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    
  }
  .selected {
    background-color: $filter;
    color: $white;
  }
}

#booklist {
  width: 92%;
  margin: 0 auto;
  padding-left: 0;
  li {
    border-bottom: 1px solid $border;
    padding: 5px 0;
    overflow: hidden;
    img {
      width: 52px;
      float: left;
      margin-right: 15px;
    }
    .book-meta {
      float: left;
      width: 76%;
      h2 {
        font-size: 16px;
        font-weight: 500;
        &:active {
          color: $dark-grey;
        }
      }
      h3 {
        font-size: 14px;
        font-weight: 300;
        color: $light-grey;
        padding-top: 3px;
        line-height: 1.3;
      }
      p {
        font-size: 13px;
        font-weight: 500;
        color: $primary;
        padding-top: 3px;
      }
      .out {
        color: $red;
      }
    }
  }
}

.students {
  padding: 0 !important;
}

#checkout-list {
	width: 100%;
	margin: 0 auto 15px auto;
	h5 {
		color: $red;
		font-weight: 500;
		font-size: 16px;
		border-bottom: 1px solid $border;
		padding-bottom: 10px;
	}
	ul {
		margin: 0;
		padding: 0;
		text-align: left;
		li {
			border-bottom: 1px solid $border;
			padding: 8px 0 10px 0;
			font-weight: 500;
			font-size: 14px;
		}
	}
}

#studentlist {
  padding-left: 0;
  margin: 0 auto;
  width: 100%;
  li {
    border-bottom: 1px solid $border;
    padding: 12px 0 14px 4%;
    overflow: hidden;
    font-weight: 500;
    position: relative;
    .first-name {
      font-weight: 500;
      margin-right: 5px;
      float: left;
    }
    .last-name {
      width: 70%;
      float: left;
    }
    .delete-name {
      color: $red;
      text-align: right;
      float: right;
      font-size: 15px;
      padding: 1px 4% 0 0;
      font-weight: 300;
      &:active {
        color: $primary;
      }
    }
  }
  .selected {
    background-color: $select;
    color: $white;
  }
  .deselected {
    color: $black;
  }
}

.student-check {
  width: 24px;
  height: 20px;
  background-image: url(../images/lib-sprites.png);
  background-size: 66px 46px;
  background-position: 24px 0;
  position: absolute;
  right: 24px;
  top: 9px;
}

/*
------------------------------
  Settings
------------------------------
*/
.settings-scroll {
  padding: 5px 0 15px 0 !important;
}

.jqimessage {
  input,textarea {
    width: 100%;
    font-size: 14px;
  }

  #help-input {
    height: 30px;
  }
  #help-textarea {
    margin-top: 10px;
    border-bottom: 0 none;
  }
}


/*
------------------------------
  Impromptu
------------------------------
*/
select#qty-input {
  width: 50%;
  // border-top: 1px solid $border;
  height: 40px;
  margin: 10px 0;
  text-align: center !important;
  font-size: 16px;
  text-indent: 45%;
}

#jqi_state2_buttonCancel {
  color: $red;
}

#jqi_state0_buttonScan,
#jqi_state1_buttonOk,
#jqi_state0_buttonSubmit,
#jqi_state0_buttonNo,
#jqi_state2_buttonCancel {
  border-left: 0 none;
}

#jqi_state0_buttonManual,
#jqi_state0_buttonList,
#jqi_state2_buttonSubmit {
  border-right: 0 none;
}

#jqi_state0_buttonCancel,
#jqi_state0_buttonYes {
  color: $red;
  border-right: 0 none;
}

.jqifade{
  position: absolute; 
  background-color: $black; 
}
/* ... */

